unpackaged/main/default/objects/ZP_Accountant_Survey_Response__c/fields/Accounting_Firm_Id__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Firm_Id__c</fullName>
    <description>For https://app.asana.com/0/1175476642052761/1186750796504521</description>
    <label>Accounting Firm Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>