unpackaged/main/default/objects/ZP_Accountant_Survey_Response__c/fields/Firm_Primary_Location_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Firm_Primary_Location_Zip_Code__c</fullName>
    <description>For https://app.asana.com/0/1175476642052761/1186750796504521</description>
    <label>Firm Primary Location Zip Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>