unpackaged/main/default/objects/ZP_Accountant_Survey_Response__c/fields/Services_Offered__c.field-meta.xml
<CustomField>
    <fullName>Services_Offered__c</fullName>
    <description>For https://app.asana.com/0/1175476642052761/1186750796504521</description>
    <label>Services Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auditing</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Financial planning</fullName>
            </value>
            <value>
                <fullName>HR Advising</fullName>
            </value>
            <value>
                <fullName>Managing payroll</fullName>
            </value>
            <value>
                <fullName>Outsourced CFO</fullName>
            </value>
            <value>
                <fullName>Tax preparation</fullName>
            </value>
            <value>
                <fullName>R&amp;D tax credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>